--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -88,13 +88,13 @@ button{
     .top-nav-bar{
         height: 118px;
         border-bottom:0;
+        
     }
     .search-box{
         width: 100%;
     }
     .menu-bar{
         width: 100%;
-
     }
     .menu-bar ul{
         margin: 10px 0;
@@ -400,14 +400,21 @@ button{
     border: .1rem #808080 solid;
     border-radius: 0.5rem; /*for making the button round*/
     cursor: pointer;
-    background-color: #f0c040;
 }
 .button:hover{
     border: .1rem #404040 solid;
 }
-/* .button.primary{
+.button.primary{
     background-color: #f0c040;
-} */
+}
+
+.button.secondary{
+    background-color: #f0f0f0;
+}
+
+.text-center{
+    text-align: center;
+}
 
 /* -----------------Website-features CSS-------------------------*/
 .website-features{
@@ -563,3 +570,40 @@ button{
     flex: 1 1;
     text-align: right;
 }
+
+/*---------------form------------*/
+
+.form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.form-container{
+    display: flex;
+    flex-direction: column;
+    width: 22rem;
+    padding: 2rem;
+    border: .1rem #c0c0c0 solid;
+    border-radius: .5rem;
+    list-style-type: none;
+}
+
+.form-container li{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+input{
+    padding: 1rem;
+    border: .1rem #c0c0c0 solid;
+    border-radius: .5rem;
+}
+
+
+
+
+
