Shipping, Payment and Place(Preview) Order pages are added.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -641,5 +641,80 @@ tbody>tr:nth-child(odd){
     background-color: #f0f0f0;
 }
 
+/*--------- checkout steps---------*/
+.checkout-steps{
+    display: flex;
+    justify-content: space-between;
+    width: 40rem;
+    margin: 1rem auto;
+}
+.checkout-steps div{
+    border-top: .3rem #c0c0c0 solid;
+    color:#c0c0c0;
+    flex: 1 1; /* for making the steps next to each other.*/
+    padding-top: 1rem;
+}
+.checkout-steps div.active{
+    border-top: .3rem #f08000 solid;
+    color:#f08000;
+}
 
+/*--------- placeOrder---------*/
+
+.placeOrder{
+    display: flex;
+    flex-grow: wrap;
+    padding: 1rem;
+    justify-content: space-between;
+}
+
+.placeOrder-info{
+    flex: 3 1 60rem;
+}
+
+.placeOrder-action{
+    flex: 1 1 20rem;
+    border: .1rem #c0c0c0 solid;
+    border-radius: .5rem;
+    background-color: #fcfcfc;
+    padding: 1rem;
+}
+
+/* The ">" symbol is a child combinator symbol to select
+ elements that are direct descendants only */
+.placeOrder-info > div{
+    border: .1rem #c0c0c0 solid;
+    border-radius: .5rem;
+    background-color: #fcfcfc;
+    padding: 1rem;
+    margin: 1rem;
+} 
+
+/* Select the first div and make margin-top 0. */
+.placeOrder-info > div:first-child{
+    margin-top: 0;
+}
+
+.placeOrder-action > ul{
+    padding: 0;
+    list-style-type: none;
+} 
+
+.placeOrder-action > ul > li{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.placeOrder-action > ul > li > h3{
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+
+/* select the last li and apply this CSS below */
+.placeOrder-action > ul > li:last-child{
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: #c04000;
+}
 
